--- a/sino_works_4.html
+++ b/sino_works_4.html
@@ -234,12 +234,12 @@
                 </div>
                 <div class="pup_window_content_part project_content_part" style="margin-bottom:40px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text">一、深度提升易用性</div>
-                        <div class="pup_normal_text">根據功能內容，設計合適的操作介面。</div>
+                        <div class="part_title h5 font_bold emphasize_text">一、深度提升介面設計</div>
+                        <div class="pup_normal_text">根據使用情境、資訊配置，導入易用性原則。</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
                                 <div class="pup_normal_text">例：投保紀錄列表</div>
-                                <div class="pup_normal_text">如何幫使用者<sapn class="emphasize_text">快速辨識投保險種、狀態、重要資訊</sapn>。</div>
+                                <div class="pup_normal_text">幫助使用者<sapn class="emphasize_text">快速掌握投保險種、狀態、重要資訊</sapn>。</div>
                                 <div class="pup_content_pic_item_content">
                                     <div class="emphasize_text large_text font_bold" style="margin-top:30px;margin-bottom:10px;">介面設計要點</div>
                                     <picture>
@@ -248,10 +248,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="pup_content_pic_container" style="margin-top:20px;">
+                        <div class="pup_content_pic_container" style="margin-top:40px;">
                             <div class="pup_content_pic_item" style="text-align:left;">
                                 <div class="pup_normal_text">例：旅遊國家選單</div>
-                                <div class="pup_normal_text">如何幫使用者<sapn class="emphasize_text">從197個國家，快速選擇到符合的國家</sapn>。</div>
+                                <div class="pup_normal_text" style="margin-bottom:10px;">幫助使用者<sapn class="emphasize_text">從197個國家，快速選擇符合的國家</sapn>。</div>
                                 <div class="pup_content_pic_item_content">
                                     <picture>
                                         <source media="(max-width:540px)" srcset="images/sino_pic_13-9-14-540.png" />
@@ -457,7 +457,7 @@
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:30px;">
                                 <div class="pup_normal_text emphasize_text font_bold" style="margin-bottom:5px;">2.介面元件擴充性</div>
                                 <div class="pup_content_pic_item_content">
-                                    <div class="pup_normal_text"><span class="emphasize_text">以原子化設計，延伸組合各式操作介面。</span><br />如：各險種資料選單-彈跳視窗</div>
+                                    <div class="pup_normal_text" style="margin-bottom:20px;"><span class="emphasize_text">以原子化設計，延伸組合各式操作介面。</span><br />如：各險種資料選單-彈跳視窗</div>
                                     <picture>
                                         <img src="images/sino_pic_13-12-1.png" class="sino_pic_10" style="max-width:1200px;">
                                     </picture>
