--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -374,7 +374,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">A.痛點：</div>
                         <div class="pup_text">
-                            不太清楚一些保險專有名詞和資料欄位用途，所以不確定輸入的資料有沒有符合自己的投保狀況。
+                            <span class="emphasize_text">不清楚一些保險專有名詞和資料欄位用途，</span>所以不確定輸入的資料有沒有符合自己的投保狀況。
                         </div>
                         <div class="pup_normal_text" style="margin-top:10px;margin-bottom:5px;"><span class="h5 font_bold emphasize_text">A1.短期行動：</span><br />在保險專有名詞、資訊<span class="emphasize_text">附加「提示說明」圖示按鈕。</span><br /><span class="pup_normal_text_small">以使用者瀏覽的角度，使用「？」疑問圖示。</span></div>
                         <div>
@@ -420,7 +420,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">B.痛點：</div>
                         <div class="pup_text">
-                            確認同意保單條款的數量和步驟太多，有想放棄投保的衝動。
+                            <span class="emphasize_text">同意保單條款的數量和步驟太多</span>，有想放棄投保的衝動。
                         </div>
                         <div style="margin-top:10px;">
                             <picture>
@@ -429,7 +429,7 @@
                                 <img src="images/sino_pic_14-11.png" class="sino_pic_6">
                             </picture>
                         </div>
-                        <div class="pup_normal_text" style="margin-top:30px;margin-bottom:5px;"><span class="h5 font_bold emphasize_text">B.行動：</span>將條款文件集中，讓使用者能一次瀏覽。<br /><span class="pup_normal_text_small">須向法務確認，此作法是否具同意條款的法律效力。</span></div>
+                        <div class="pup_normal_text" style="margin-top:30px;margin-bottom:5px;"><span class="h5 font_bold emphasize_text">B.行動：將條款文件集中，讓使用者能一次瀏覽。</span><br /><span class="pup_normal_text_small">須向法務確認，此作法是否具同意條款的法律效力。</span></div>
                         <div>
                             <picture>
                                 <source media="(max-width:430px)" srcset="images/sino_pic_14-12-430.png" />
@@ -443,7 +443,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">C.痛點：</div>
                         <div class="pup_text">
-                            確認投保資料，一開始完全不知道該怎麼到下一步驟，要滑動螢幕到最下方才看得到「繳納保險費用」的按鈕。
+                            確認投保資料，<span class="emphasize_text">不知道該怎麼到下一步驟，<br/>要滑動到最下方才看到「繳納保險費用」按鈕。</span>
                         </div>
                         <div style="margin-top:10px;">
                             <picture>
@@ -456,7 +456,7 @@
                             </picture>
                         </div>
                         <div class="pup_normal_text" style="margin-top:30px;margin-bottom:5px;">
-                            <span class="h5 font_bold emphasize_text">C.行動：</span><br />於行動裝置版面(media1024px)時，<br />將「繳納保險費用」按鈕設置浮動置底(position:fixed;bottom:0px;)。
+                            <span class="h5 font_bold emphasize_text">C.行動：</span><br />於行動裝置版面(media1024px)時，<br /><span class="emphasize_text">將「繳納保險費用」按鈕設置浮動置底</span>(position:fixed;bottom:0px;)。
                         </div>
                         <div>
                             <picture>
@@ -505,7 +505,7 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">D.痛點：</div>
                         <div class="pup_text">
-                            投保身分驗證，容易忽略「發送驗證碼」按鈕，先去點到「確認驗證碼」按鈕。
+                            投保身分驗證，<span class="emphasize_text">容易忽略「發送驗證碼」按鈕，先去點擊「確認驗證碼」按鈕。</span>
                         </div>
                         <div style="margin-top:10px;">
                             <picture>
