--- a/uiux_index.html
+++ b/uiux_index.html
@@ -684,7 +684,7 @@
                                     <img src="images/info_skill_pic_2-2.png" alt="Illustrator logo">
                                 </div>
                             </div>
-                            <div>
+                            <div style="margin-top:15px;">
                                 <div class="info_skill_item_title h5 font_bold">Figma</div>
                                 <div class="info_skill_item_text">
                                     4~5年製作網站、APP介面的使用經驗，懂Auto Layout、Component、Library、Prototype設置。
@@ -694,12 +694,22 @@
                                     <img src="images/info_skill_pic_3-2.png" alt="Figma logo">
                                 </div>
                             </div>
-                            <div class="item_check_padding">
+                            <div>
+                                <div class="info_skill_item_title h5 font_bold">After effects</div>
+                                <div class="info_skill_item_text">
+                                     可展示產品原型的介面動態效果。
+                                </div>
+                                <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
+                                <div class="info_skill_item_pic">
+                                    <img src="images/info_skill_pic_14.png" alt="AE logo">
+                                </div>
+                            </div>
+                            <div class="item_check_padding" style="display:none;">
                                 <div class="info_skill_item_title h5 font_bold">After effects</div>
                                 <div class="info_skill_item_text">
                                     可展示產品原型的介面動態效果。
                                 </div>
-                                <div class="info_skill_item_check font_bold appear-animation ae_works_btn" data-appear-animation="fadeInUp">觀看相關製作</div>
+                                <div class="info_skill_item_check font_bold appear-animation ae_works_btn" data-appear-animation="fadeInUp" style="display:none;">觀看相關製作</div>
                                 <div class="info_skill_item_pic">
                                     <img src="images/info_skill_pic_14.png" alt="Figma logo">
                                 </div>
