--- a/sino_works_5.html
+++ b/sino_works_5.html
@@ -267,13 +267,10 @@
                         </div>
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:50px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">三、頁籤(Tab)選項切換內容</div>
-                                <div class="pup_content_text" style="margin-top:0px;padding-left:0px;">
+                                <div class="part_title h5 font_bold emphasize_text">三、頁籤(Tab)切換內容</div>
+                                <div class="pup_content_text" style="margin-top:15px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
-                                            <div class="pup_normal_text_small" style="margin-top:10px;margin-bottom:5px;">
-                                                內容顯示動畫
-                                            </div>
                                             <div>
                                                 <picture>
                                                     <img src="images/sino_pic_15-9.png" class="sino_pic_6">
@@ -286,7 +283,7 @@
                         </div>
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:50px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">四、可點擊介面物件，鼠標懸停(hover)提示</div>
+                                <div class="part_title h5 font_bold emphasize_text">四、操作元件，鼠標懸停(hover)提示</div>
                                 <div class="pup_content_text" style="margin-top:0px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
