--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -85,7 +85,7 @@
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle" id="sino_w6_tab1"><span>內容說明</span></a></div>
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_14" class="set_middle" id="sino_w6_tab2"><span>行動建議</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_15" class="set_middle" id="sino_w6_tab3"><span>行動決策</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_15" class="set_middle" id="sino_w6_tab3"><span>開發決策</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
