--- a/sino_works_8.html
+++ b/sino_works_8.html
@@ -84,7 +84,7 @@
 
         <div class="pup_window_content_tab_container">
             <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_12" class="set_middle"><span>分析策略</span></a></div>
-            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle"><span>執行提案</span></a></div>
+            <div class="pup_window_content_tab pup_tab_btn h5 font_bold"><a href="#sino_tab_13" class="set_middle"><span>執行說明</span></a></div>
         </div>
         <div class="pup_window_tab_content_container">
 
