--- a/sino_works_6.html
+++ b/sino_works_6.html
@@ -96,12 +96,12 @@
                             <div class="pup_content">
                                 <div class="part_title h5 font_bold emphasize_text">前言</div>
                                 <div class="pup_text large_text">
-                                    此次測試目標為<span class="emphasize_text">了解使用者於網站完成投保，過程中的感受、對內容理解和是否有不必要的操作行為</span>；
+                                    此次測試目標為<span class="emphasize_text">了解使用者於網站完成投保，過程中的感受、內容理解和操作行為；</span>
                                 </div>
                                 <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                                     <div class="text_row">
                                         <div class="text_item">
-                                            <div class="text_item_title h6">並根據目標客群條件，制定招募問卷進行受測者招募。</div>
+                                            <div class="text_item_title h6">根據目標客群條件，制定招募問卷進行受測者招募。</div>
                                         </div>
 
                                     </div>
@@ -356,7 +356,7 @@
                         <div class="pup_content_text" style="margin-top:10px;padding-left:0px;">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6">統整發生比例50%以上的相似痛點為優先，在開發進度中提出行動建議。</div>
+                                    <div class="text_item_title h6">將相似痛點進行統整，提出行動建議。</div>
                                     <div>
                                         <picture>
                                             <source media="(max-width:768px)" srcset="images/sino_pic_14-3-768.png" />
