--- a/sino_works_8.html
+++ b/sino_works_8.html
@@ -178,7 +178,7 @@
                         </div>
                         <div class="pup_window_content_part project_content_part" style="margin-bottom:50px;padding-left:0px;">
                             <div class="pup_content">
-                                <div class="part_title h5 font_bold emphasize_text">三、確認分析要點和競品後，前往產品網站進行分析</div>
+                                <div class="part_title h5 font_bold emphasize_text">三、確認分析要點和競品後，前往競品網站進行分析</div>
                             </div>
                         </div>
                         <div class="pup_window_content_end_tip_container">
