--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -203,7 +203,7 @@
                                                             <div class="dot"><i class="fa fa-circle"></i></div>可以註冊為APP(前台)的使用者。
                                                         </div>
                                                         <div class="item_text">
-                                                            須核對員工手機號碼→手機驗證碼認證員工身分→登入密碼設定<br/>→系統寄送信件於員工信箱→員工於信件中點擊帳號開通連結。
+                                                            須核對員工手機號碼→手機驗證碼認證員工身分→登入密碼設定<br />→系統寄送信件於員工信箱→員工於信件中點擊帳號開通連結。
                                                         </div>
                                                     </div>
                                                 </div>
@@ -919,10 +919,20 @@
                                 <div class="text_item">
                                     <div>
                                         <img src="images/yulon_pic_2-1.png" class="sino_pic_10">
+                                    </div>
+                                    <div style="margin-top:20px;">
                                         <img src="images/yulon_pic_2-2.png" class="sino_pic_10">
+                                    </div>
+                                    <div style="margin-top:20px;">
                                         <img src="images/yulon_pic_2-3.png" class="sino_pic_10">
+                                    </div>
+                                    <div style="margin-top:20px;">
                                         <img src="images/yulon_pic_2-4.png" class="sino_pic_10">
+                                    </div>
+                                    <div style="margin-top:20px;">
                                         <img src="images/yulon_pic_2-5.png" class="sino_pic_10">
+                                    </div>
+                                    <div style="margin-top:20px;">
                                         <img src="images/yulon_pic_2-6.png" class="sino_pic_10">
                                     </div>
                                 </div>
