--- a/yulon_works_3.html
+++ b/yulon_works_3.html
@@ -435,7 +435,7 @@
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>B2.2.1福利內容&nbsp;申請提示-未符合條件</span>
+                                <span>B2.2.1福利內容&nbsp;申請提示-不符申請資格</span>
                                 <img src="images/yulon_pic_6-53.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -521,95 +521,52 @@
                                 <img src="images/yulon_pic_7-0.png" style="max-width:100%;">
                             </div>
                         </div>
+
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 10px 0px;">
                             接續展示頁面
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:0px;">
-                                <img src="images/yulon_pic_7-40.png" style="max-width:100%">
+                                <img src="images/yulon_pic_7-41.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            M1專屬員工資料
+                            前導情境
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>M1.1.1專屬員工資料&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-36.png" style="max-width:100%">
+                                <span>載入頁面</span>
+                                <img src="images/yulon_pic_7-42.png" style="max-width:100%">
+                            </div>
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>頁面發生錯誤</span>
+                                <img src="images/yulon_pic_7-43.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            M10職務項目
+                            Q1常見問題
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.2.1內部訊息-系統&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-37.png" style="max-width:100%">
+                                <span>Q1.1.1常見問題&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-44.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            N11數位名片
+                            Q2問題回報
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N11.1.1數位名片-中文</span>
-                                <img src="images/yulon_pic_7-38.png" style="max-width:100%">
+                                <span>Q2.1.1問題回報&nbsp;初始狀態</span>
+                                <img src="images/yulon_pic_7-45.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N11.2.1數位名片-英文</span>
-                                <img src="images/yulon_pic_7-39.png" style="max-width:100%">
-                            </div>
-                        </div>
-                        <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 10px 0px;">
-                            接續展示頁面
-                        </div>
-                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
-                            <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:0px;">
-                                <img src="images/yulon_pic_7-27.png" style="max-width:100%">
-                            </div>
-                        </div>
-                        <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            N1內部訊息
-                        </div>
-                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.1.1內部訊息-集團&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-28.png" style="max-width:100%">
+                                <span>Q2.1.2問題回報&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-46.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.1.2內部訊息-集團&nbsp;載入訊息</span>
-                                <img src="images/yulon_pic_7-29.png" style="max-width:100%">
-                            </div>
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.1.3內部訊息-集團&nbsp;已呈現所有訊息</span>
-                                <img src="images/yulon_pic_7-30.png" style="max-width:100%">
-                            </div>
-                        </div>
-                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.2.1內部訊息-系統&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-32.png" style="max-width:100%">
-                            </div>
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.3.2內部訊息-個人&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-33.png" style="max-width:100%">
-                            </div>
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.1.4內部訊息-集團&nbsp;空白狀態</span>
-                                <img src="images/yulon_pic_7-31.png" style="max-width:100%">
-                            </div>
-                        </div>
-                        <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            N2閱讀訊息
-                        </div>
-                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.1.1閱讀訊息-集團&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-34.png" style="max-width:100%">
-                            </div>
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>N1.2.1閱讀訊息-系統、個人&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-35.png" style="max-width:100%">
+                                <span>Q2.1.3問題回報&nbsp;錯誤狀態</span>
+                                <img src="images/yulon_pic_7-47.png" style="max-width:100%">
                             </div>
                         </div>
 
@@ -765,48 +722,94 @@
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:0px;">
-                                <img src="images/yulon_pic_7-41.png" style="max-width:100%">
+                                <img src="images/yulon_pic_7-27.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            前導情境
+                            N1內部訊息
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>載入頁面</span>
-                                <img src="images/yulon_pic_7-42.png" style="max-width:100%">
+                                <span>N1.1.1內部訊息-集團&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-28.png" style="max-width:100%">
                             </div>
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>頁面發生錯誤</span>
-                                <img src="images/yulon_pic_7-43.png" style="max-width:100%">
+                                <span>N1.1.2內部訊息-集團&nbsp;載入訊息</span>
+                                <img src="images/yulon_pic_7-29.png" style="max-width:100%">
+                            </div>
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N1.1.3內部訊息-集團&nbsp;已呈現所有訊息</span>
+                                <img src="images/yulon_pic_7-30.png" style="max-width:100%">
+                            </div>
+                        </div>
+                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N1.2.1內部訊息-系統&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-32.png" style="max-width:100%">
+                            </div>
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N1.3.2內部訊息-個人&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-33.png" style="max-width:100%">
+                            </div>
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N1.1.4內部訊息-集團&nbsp;空白狀態</span>
+                                <img src="images/yulon_pic_7-31.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            Q1常見問題
+                            N2閱讀訊息
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>Q1.1.1常見問題&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-44.png" style="max-width:100%">
+                                <span>N1.4.1閱讀訊息-集團&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-34.png" style="max-width:100%">
+                            </div>
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N1.5.1閱讀訊息-系統、個人&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-35.png" style="max-width:100%">
+                            </div>
+                        </div>
+
+                        <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 10px 0px;">
+                            接續展示頁面
+                        </div>
+                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
+                            <div class="pup_content_pic_item_content yuanta_pic_1" style="margin-top:0px;">
+                                <img src="images/yulon_pic_7-40.png" style="max-width:100%">
                             </div>
                         </div>
                         <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
-                            Q2問題回報
+                            M1專屬員工資料
                         </div>
                         <div class="pup_content_pic_item" style="margin-bottom:30px;">
                             <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>Q2.1.1問題回報&nbsp;初始狀態</span>
-                                <img src="images/yulon_pic_7-45.png" style="max-width:100%">
-                            </div>
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>Q2.1.2問題回報&nbsp;理想狀態</span>
-                                <img src="images/yulon_pic_7-46.png" style="max-width:100%">
-                            </div>
-                            <div class="pup_content_pic_item_content yuanta_pic_1">
-                                <span>Q2.1.3問題回報&nbsp;錯誤狀態</span>
-                                <img src="images/yulon_pic_7-47.png" style="max-width:100%">
+                                <span>M1.1.1專屬員工資料&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-36.png" style="max-width:100%">
                             </div>
                         </div>
+                        <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
+                            M10職務項目
+                        </div>
+                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N1.2.1內部訊息-系統&nbsp;理想狀態</span>
+                                <img src="images/yulon_pic_7-37.png" style="max-width:100%">
+                            </div>
+                        </div>
+                        <div class="pup_text large_text font_bold emphasize_text" style="text-align:center;margin:20px 0px 30px 0px;">
+                            M11數位名片
+                        </div>
+                        <div class="pup_content_pic_item" style="margin-bottom:30px;">
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N11.1.1數位名片-中文</span>
+                                <img src="images/yulon_pic_7-38.png" style="max-width:100%">
+                            </div>
+                            <div class="pup_content_pic_item_content yuanta_pic_1">
+                                <span>N11.2.1數位名片-英文</span>
+                                <img src="images/yulon_pic_7-39.png" style="max-width:100%">
+                            </div>
+                        </div>
+
                         <div class="pup_window_content_end_tip_container">
                             <span class="pup_window_content_end_tip">已瀏覽完&nbsp;<span class="emphasize_text">內容(二)設計稿</span></span>
                         </div>
