--- a/yulon_works_4.html
+++ b/yulon_works_4.html
@@ -106,8 +106,20 @@
                         B1員工福利項目
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_1.1員工福利項目-上架區&nbsp;初始狀態</span>
+                        <img src="images/yulon_pic_9-2-1.png" style="max-width:100%">
+                    </div>
+                    <div class="pup_content_pic" style="margin-bottom:30px;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_1.2員工福利項目-上架區&nbsp;理想狀態</span>
                         <img src="images/yulon_pic_9-2.png" style="max-width:100%">
+                    </div>
+                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_1.3員工福利項目-上架區&nbsp;空白狀態</span>
+                        <img src="images/yulon_pic_9-2-2.png" style="max-width:100%">
+                    </div>
+                    <div class="pup_content_pic" style="margin-bottom:30px;">
+                        <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_1.4員工福利項目-上架區&nbsp;局部狀態-欄位focus</span>
+                        <img src="images/yulon_pic_9-2-3.png" style="max-width:100%">
                     </div>
                     <div class="pup_content_pic" style="margin-bottom:30px;">
                         <span class="pup_normal_text_small" style="margin-bottom:10px;display:inline-block;">B1_3.1員工福利項目-刪除項目-彈跳視窗&nbsp;初始狀態</span>
