--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -92,14 +92,14 @@
             <div id="yulon_tab_9" class="pup_window_tab_content">
                 <div class="pup_window_content_part" style="margin-top:20px;padding-left:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 一、根據業務需要，規劃後台資訊介面</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 一、根據業務需要，規劃後台首頁介面</div>
                         <div class="pup_content_pic_container" style="margin-top:10px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_text" style="margin-top:5px;padding-left:20px;">
                                     <ul class="text_item_list pup_normal_text_small emphasize_text" style="list-style:disc">
-                                        <li>具時效性處理之業務提示。</li>
-                                        <li>有關業務目標的數據追蹤。</li>
-                                        <li>追蹤後台操作紀錄。</li>
+                                        <li>具時效性業務的處理提示。</li>
+                                        <li>業務目標的數據資料。</li>
+                                        <li>及時後台管理紀錄。</li>
                                     </ul>
                                 </div>
                                 <div style="margin-top:20px;">
