--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -127,7 +127,7 @@
                                     <div class="text_item_title h6 emphasize_text">產品價值：</div>
                                     <ul class="text_item_list" style="list-style:disc">
                                         <li>藉由<span class="emphasize_text">傳達集團訊息至員工手機</span>，取代各子公司到部門員工的方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
-                                        <li>提供員工福利資訊，<span class="emphasize_text">強化員工APP產品的使用。</span></li>
+                                        <li>管理員工福利項目，<span class="emphasize_text">強化員工APP黏著度。</span></li>
                                         <li>輔助管理福利項目和審核申請，<span class="emphasize_text">減少人工作業成本。</span></li>
                                         <li>發布集團職缺資訊，作員工轉職參考<span class="emphasize_text">加強人才存留。</span></li>
                                     </ul>
