--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -117,13 +117,13 @@
                 </div>
                 <div class="pup_window_content_part" style="padding-left:0px;">
                     <div class="pup_content">
-                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、根據後台操作情境，設計使用功能</div>
+                        <div class="part_title h5 font_bold emphasize_text" style="margin:0px 0px 0px 0px;"> 二、根據操作情境，規劃使用功能</div>
                         <div class="pup_content_pic_container" style="margin-top:20px;">
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
                                 <div class="pup_normal_text" style="margin-bottom:5px;"><span class="emphasize_text">1.頻率高、需即時性的操作</span></div>
                                 <div class="pup_normal_text" style="margin-bottom:20px;"><span>以強化提示、簡化流程為設計方向。</span></div>
-                                <div class="pup_normal_text emphasize_text" style="margin-bottom:15px;">如：員工福利「留言和管理員回覆」的操作機制。</div>
-                                <div class="pup_normal_text_small" style="margin-bottom:0px;">員工可於APP(前台)對職福商品進行留言</div>
+                                <div class="pup_normal_text emphasize_text" style="margin-bottom:15px;">如：福利項目「留言和管理員回覆」的操作機制。</div>
+                                <div class="pup_normal_text_small" style="margin-bottom:0px;">員工可於APP(前台)對福利項目進行留言</div>
                                 <div class="pup_content_pic_item" style="text-align:left;margin-top:15px;margin-bottom:0px;">
                                     <div class="pup_content_pic_item_content yuanta_pic_1">
                                         <span>B2.1.1福利內容(前台)</span>
@@ -168,7 +168,7 @@
                                         <img src="images/yulon_pic_6-64.png" style="max-width:100%">
                                     </div>
                                 </div>
-                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:0px;"><span class="emphasize_text">當該福利項目申請時間結束，顯示「申請數提示」。</span></div>
+                                <div class="pup_normal_text" style="margin-top:20px;margin-bottom:0px;"><span class="emphasize_text">當該福利項目申請時間結束，顯示「申請提示」。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:20px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -186,7 +186,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️符合管理員操作頻率低、重要性高的業務流程。</span></div>
+                                <div class="pup_normal_text font_bold" style="margin-top:0px;"><span class="emphasize_text">☑️符合管理員操作頻率低、重要性高的操作任務。</span></div>
                             </div>
                         </div>
                     </div>
@@ -304,8 +304,8 @@
                                 <div class="pup_normal_text emphasize_text font_bold">☑️有效率解決使用者問題，減少管理單位處理的人工成本。</div>
                             </div>
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
-                                <div class="part_title h5 font_bold emphasize_text" style="margin:20px 0px 10px 0px;">二、依資訊重要度，設計介面層級引導視覺閱讀</div>
-                                <div class="pup_normal_text" style="margin-bottom:5px;">如：B2.員工福利項目(後台)，<span class="emphasize_text">以線框稿討論操作情境</span>規劃後台介面用色。<br /><span class="pup_normal_text_small">根據主色調(暗色)，依視覺引導力大至小，<span class="emphasize_text">黑灰&nbsp;&lt;&nbsp;灰&nbsp;&lt;&nbsp;白&nbsp;&lt;&nbsp;黃，對應資訊重要程度</span>，安排介面用色</span></div>
+                                <div class="part_title h5 font_bold emphasize_text" style="margin:20px 0px 10px 0px;">二、依資訊重要度，設計視覺層級引導操作</div>
+                                <div class="pup_normal_text" style="margin-bottom:5px;">如：B2.員工福利項目(後台)，<span class="emphasize_text">由線框稿討論資訊重要度</span>規劃介面用色。<br /><span class="pup_normal_text_small">根據主色調(暗色)，依視覺引導力大至小，<span class="emphasize_text">黑灰&nbsp;&lt;&nbsp;灰&nbsp;&lt;&nbsp;白&nbsp;&lt;&nbsp;黃，對應資訊重要程度</span>，安排介面用色</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
                                         <div class="pup_content_pic_item_content yuanta_pic_1">
@@ -315,37 +315,37 @@
                                     </div>
                                 </div>
                                 <div class="pup_normal_text">
-                                    <span class="font_bold"><span class="emphasize_text">黑灰(最弱)：<br /></span>介面物件無法使用。</span><br />
+                                    <span class="font_bold"><span class="emphasize_text">黑灰(最弱)：<br /></span>提示無法使用。</span><br />
                                     <span class="pup_normal_text_small">如：「員工福利頁」處於第1頁時，「上一頁」選項無法使用，以黑灰為用色。</span>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-1.png" style="max-width:100%"></div>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:30px;">
-                                    <span class="font_bold"><span class="emphasize_text">灰(較弱)：<br /></span>介面物件非當前選擇、使用狀態，一般資訊。</span><br />
-                                    <span class="pup_normal_text_small">非當前選擇，如：頁面選單、內容選項(tab)、頁碼選項。</span><br />
-                                    <span class="pup_normal_text_small">非使用狀態，如：未勾選福利項目時，「下架」、「刪除」福利項目按鈕為非使用狀態，輸入框未輸入資料。</span><br />
-                                    <span class="pup_normal_text_small">一般資訊，如：福利項目「類型」、「架上狀態」。</span>
+                                    <span class="font_bold"><span class="emphasize_text">灰(較弱)：<br /></span>提示非當前選擇、非當前使用、一般資訊。</span><br />
+                                    <span class="pup_normal_text_small">非當前選擇，如：頁面選單「管理首頁」、Tab選項「下架區」、頁碼「2 3 4 5」。</span><br />
+                                    <span class="pup_normal_text_small">非使用狀態，如：未勾選福利項目時，「下架」、「刪除」按鈕，輸入框placehoder「搜尋名稱關鍵字」。</span><br />
+                                    <span class="pup_normal_text_small">一般資訊，如：福利項目類型、狀態「活動 ‧ 準備中」。</span>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-2.png" style="max-width:100%"></div>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-3.png" style="max-width:100%"></div>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-4.png" style="max-width:100%"></div>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:30px;">
-                                    <span class="font_bold"><span class="emphasize_text">白(較強)：<br /></span>介面物件為當前選擇、使用狀態，重要資訊。</span><br />
-                                    <span class="pup_normal_text_small">當前選擇，如：頁面選單、內容選項(tab)、頁碼選項。</span><br />
-                                    <span class="pup_normal_text_small">使用狀態，如：輸入框已輸入資料。</span><br />
-                                    <span class="pup_normal_text_small">重要資訊，如：頁面標題、福利項目「名稱」、「申請期間」、「申請率」。</span>
+                                    <span class="font_bold"><span class="emphasize_text">白(較強)：<br /></span>提示當前選擇、當前使用、重要資訊。</span><br />
+                                    <span class="pup_normal_text_small">當前選擇，如：頁面選單「員工福利」、Tab選項「上架區」、頁碼「1」。</span><br />
+                                    <span class="pup_normal_text_small">使用狀態，如：輸入框輸入資料「不限」。</span><br />
+                                    <span class="pup_normal_text_small">重要資訊，如：頁面標題「員工福利」、福利項目名稱、申請期間「Cream Tea檸檬塔」「10.01~10.20」。</span>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-5.png" style="max-width:100%"></div>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-6.png" style="max-width:100%"></div>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-7.png" style="max-width:100%"></div>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:30px;">
-                                    <span class="font_bold"><span class="emphasize_text">黃(最強)：<br /></span>介面物件、資訊為最重要資訊。</span><br />
+                                    <span class="font_bold"><span class="emphasize_text">黃(最強)：<br /></span>提示最重要資訊。</span><br />
                                     <span class="pup_normal_text_small">如：高熱門度、高申請率的福利項目資訊。</span>
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-8.png" style="max-width:100%"></div>
                                 </div>
-                                <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️以視覺引導操作</span>，增加介面閱讀性和易用性。</div>
+                                <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️以視覺引導操作</span>，增加介面易讀、易用性。</div>
                             </div>
                             <div class="pup_content_pic_item" style="text-align:left;margin-bottom:40px;">
-                                <div class="part_title h5 font_bold emphasize_text" style="margin:20px 0px 10px 0px;">三、以易用性原則，根據操作順序設計介面變化</div>
+                                <div class="part_title h5 font_bold emphasize_text" style="margin:20px 0px 10px 0px;">三、根據操作順序，設計介面狀態</div>
                                 <div class="pup_normal_text" style="margin-bottom:5px;">如：B2.員工福利項目(後台)，<span class="emphasize_text">以「預設、鼠標懸停、勾選」福利項目為例。</span></div>
                                 <div style="margin-top:20px;">
                                     <div class="pup_content_pic_item" style="text-align:left;margin-bottom:0px;">
