--- a/yulon_works_5.html
+++ b/yulon_works_5.html
@@ -360,14 +360,14 @@
                                     <div style="margin:10px 0px 0px 0px;"><img src="images/yulon_pic_10-10.png" style="max-width:100%"></div>
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;">
-                                    <span class="font_bold"><span class="emphasize_text">滑鼠懸停樣式(hover)：</span></span><br />
+                                    <span class="font_bold"><span class="emphasize_text">滑鼠懸停(hover)：</span></span><br />
                                     <span class="pup_normal_text">福利項目顯示勾選框。</span>
                                     <div style="margin:10px 0px 5px 0px;"><img src="images/yulon_pic_10-11.png" style="max-width:100%"></div>
 
                                 </div>
                                 <div class="pup_normal_text" style="margin-top:20px;">
-                                    <span class="font_bold"><span class="emphasize_text">勾選樣式(checked)：</span></span><br />
-                                    <span class="pup_normal_text">勾選後，「下架」、「刪除」福利項目按鈕為轉為可使用狀態。</span>
+                                    <span class="font_bold"><span class="emphasize_text">勾選(checked)：</span></span><br />
+                                    <span class="pup_normal_text">「下架」、「刪除」按鈕呈現可使用狀態。</span>
                                     <div style="margin:10px 0px 5px 0px;"><img src="images/yulon_pic_10-12.png" style="max-width:100%"></div>
                                 </div>
                                 <div class="pup_normal_text font_bold" style="margin-top:30px;"><span class="emphasize_text">☑️避免「非當下使用情境」的介面提示，減輕使用者閱讀操作的認知成本。</span></div>
